--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "python.pythonPath": "venv/bin/python",
     "editor.formatOnSave": true,
+    "editor.wordWrapColumn": 120,
+    "editor.wordWrap": "wordWrapColumn",
+    "python.formatting.autopep8Args": [
+        "--max-line-length=200",
+    ],
     "python.formatting.provider": "autopep8",
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
