--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.3.4
 autopep8==1.5.7
+beautifulsoup4==4.9.3
+crispy-bootstrap5==0.3.1
 Django==3.2.3
+django-bootstrap-v5==1.0.4
 django-crispy-forms==1.11.2
 django-filter==2.4.0
 django-simple-history==3.0.0
 django-tables2==2.4.0
+importlib-metadata==3.10.1
 pycodestyle==2.7.0
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 toml==0.10.2
+zipp==3.4.1
