--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,17 @@ django-crispy-forms==1.11.2
 django-filter==2.4.0
 django-simple-history==3.0.0
 django-tables2==2.4.0
+et-xmlfile==1.1.0
 importlib-metadata==3.10.1
+openpyxl==3.0.7
 pycodestyle==2.7.0
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+tablib==3.0.0
 toml==0.10.2
+xlrd==2.0.1
+xlwt==1.3.0
 zipp==3.4.1
